add new CartItem class
