# app/Models/User.php
@@ -66,4 +66,14 @@ class User extends Authenticatable
     {
         return $this->role === 'admin';
     }
+
+    public function orders()
+    {
+        return $this->hasMany(Order::class);
+    }
+
+    public function cart()
+    {
+        return $this->hasOne(Cart::class);
+    }
 }
